--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,7 +133,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/header-bg1.jpg) no-repeat center top;
+	background: url(../img/background.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
